# Obsidian-Notes-Agent

./: .gitignore  PaperToVault.py  build_obsidian_vault.py  cleanupFileName.py  localRAG.py  papersToVault.py  requirements.txt
LangchainRAG/: docker-compose.yml  rag_research.ipynb
LocalRAG/: ingestion_pipeline.py  load_papers.py  main.py  obsidian_mcp_server.py  rag_query_agent.py  requirements.txt  workflow.py
LocalRAGValidator/: app.py  docker-compose.yml  injest_pdf.py  mcp_server.py  rag_engine.py  requirements.txt
papers-to-obsidian/: .env  README.md  obsidian_paper.py  pyproject.toml
papers-to-obsidian/adapters/eli5_final/: adapter_config.json  adapters.safetensors
papers-to-obsidian/adapters/executive_final/: adapter_config.json  adapters.safetensors
papers-to-obsidian/adapters/intuitive_final/: adapter_config.json  adapters.safetensors
papers-to-obsidian/fineTune/: README.md  paperExtractor.py  sdg.py  split_data.py  trim_jsonl.py
papers-to-obsidian/fineTune/data/: eli5.jsonl  eli5_2048.jsonl  executive.jsonl  executive_2048.jsonl  intuitive.jsonl  intuitive_2048.jsonl
papers-to-obsidian/fineTune/data/eli5/: train.jsonl  valid.jsonl
papers-to-obsidian/fineTune/data/eli5_2048/: train.jsonl  valid.jsonl
papers-to-obsidian/fineTune/data/executive/: train.jsonl  valid.jsonl
papers-to-obsidian/fineTune/data/executive_2048/: train.jsonl  valid.jsonl
papers-to-obsidian/fineTune/data/intuitive/: train.jsonl  valid.jsonl
papers-to-obsidian/fineTune/data/intuitive_2048/: train.jsonl  valid.jsonl
papers-to-obsidian/utils/: vision.py
(+4 files in other folders)
